# proj001_seam-carving

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp
